# analog-sdmm

./: README.md  complex_sdmm.py  create_data.py  finite_field_discretization.ipynb  pyproject.toml  real_sdmm.py  speed_test.ipynb
