[project]
name = "analog-sdmm"
version = "0.1.0"
description = "Code for Analog Secure Distributed Matrix Multiplication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "galois>=0.4.10",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numba>=0.63.1",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scipy>=1.15.1",
]
